kubernetes/deployment.yaml
# Copyright 2025 Marcelo Parisi (github.com/feitnomore)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubevirt-manager
  namespace: kubevirt-manager
  labels:
    app: kubevirt-manager
    kubevirt-manager.io/version: nightly
spec:
  selector:
    matchLabels:
      app: kubevirt-manager
      kubevirt-manager.io/version: nightly
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kubevirt-manager
        kubevirt-manager.io/version: nightly
    spec:
      containers:
        - name: kubevirtmgr
          image: docker.io/kubevirtmanager/kubevirt-manager:nightly
          imagePullPolicy: IfNotPresent
          # env:
          # - name: APP_BASE_PATH
          #   value: / # Change to /kubevirt-manager/ to serve under a subpath
          ports:
          - name: http
            containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 10000
            runAsGroup: 30000
          volumeMounts:
          - mountPath: /etc/nginx/conf.d
            name: nginx-conf-d
          - mountPath: /usr/share/nginx/html
            name: html-volume
          - name: cache-volume
            mountPath: /var/cache/nginx
          - name: run-volume
            mountPath: /var/run
          - name: oauth-config
            mountPath: /etc/nginx/oauth.d/
          - name: auth-config
            mountPath: /etc/nginx/auth.d/
          - name: auth-secret
            mountPath: /etc/nginx/secret.d/
          - name: prometheus-config
            mountPath: /etc/nginx/location.d/
      serviceAccountName: kubevirt-manager
      restartPolicy: Always
      volumes:
        - emptyDir: {}
          name: html-volume
        - emptyDir: {}
          name: nginx-conf-d  
        - name: cache-volume
          emptyDir: {}
        - name: run-volume
          emptyDir: {}
        - name: oauth-config
          configMap:
            name: oauth-config
            optional: true
        - name: auth-config
          configMap:
            name: auth-config
            optional: true
        - name: auth-secret
          secret:
            secretName: auth-secret
            optional: true
        - name: prometheus-config
          configMap:
            name: prometheus-config
            optional: true
