kubernetes/ingress.yaml
# Copyright 2025 Marcelo Parisi (github.com/feitnomore)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubevirt-manager
  namespace: kubevirt-manager
  labels:
    app: kubevirt-manager
    kubevirt-manager.io/version: nightly
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt
    # If you are using OAUTH, make sure Proxy Buffers are big enougth
    nginx.org/location-snippets: |
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection $connection_upgrade;
spec:
  ingressClassName: my-ingress-class
  tls:
   - hosts:
     - my-host.com
  rules:
  - host: my-host.com
    http:
      paths:
      - path: /kubevirt-manager/
        pathType: Prefix
        backend:
          service:
            name: kubevirt-manager
            port:
              number: 8080
